# AMD_Hackathon

./: .dockerignore  .env.example  .gitignore  Makefile  Modelfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: ci.yml  docker-build.yml
Documentation/: API_Documentation.md  Code_Style_Guide.md  Deployment_Runbook.md  Developer_Setup_Guide.md  PRD.md  PRD_MultiModelRouter.md  Setup_Guide.md  TDD.md  TDD_MultiModelRouter.md  Team_Allocation.md  Test_Plan.md  Test_Plan_and_Cases.md  context_continuation_document.md
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/: llama3_2_router_finetuning.ipynb
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/checkpoints/: README.md
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/checkpoints/checkpoint-100/: rng_state.pth  trainer_state.json
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/checkpoints/checkpoint-200/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/checkpoints/checkpoint-300/: rng_state.pth  trainer_state.json
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/checkpoints/checkpoint-400/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/checkpoints/checkpoint-500/: rng_state.pth
Multi_Model_Router_Llama3_QLoRA_Finetuning.ipynb/dataset/: training_dataset.csv
app/: .dockerignore  Dockerfile  config.py  database.py  main.py  models.py
app/middleware/: __init__.py  logging_middleware.py
app/services/: classifier.py  executor.py  fireworks_client.py  huggingface_client.py  ollama_client.py  router.py
configs/: model_registry.yaml  routing_rules.yaml
data/: .gitkeep  training_dataset.csv
data/chromadb/: chroma.sqlite3
docs/: API.md  Architecture.md  Deployment.md  Developer_Guide.md  MLOps.md  conversation_continuation.md
error/: error.txt
error/solution/: Black_Error_Solution_Guide.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx  RouterFlow.jsx  UI.jsx
frontend/src/components/dashboard/: README.md
frontend/src/components/playground/: README.md
frontend/src/context/: AppContext.jsx
frontend/src/data/: navigation.js
frontend/src/hooks/: README.md
frontend/src/layouts/: README.md
frontend/src/pages/: AnalyticsPage.jsx  ArchitecturePage.jsx  HealthPage.jsx  HistoryPage.jsx  HomePage.jsx  LandingPage.jsx  MetricsPage.jsx  NotFoundPage.jsx  OverviewPage.jsx  PlaygroundPage.jsx  RouterPage.jsx  SettingsPage.jsx
frontend/src/services/: api.js  metrics.js
frontend/src/utils/: README.md
ml/: __init__.py  pipeline.py  registry.py
ml/stages/: __init__.py  data_validation.py  preprocessing.py  training.py
models/: registry.json
monitoring/: prometheus.yml
notebooks/checkpoints/checkpoint-100/: scheduler.pt
notebooks/checkpoints/checkpoint-300/: scheduler.pt
notebooks/checkpoints/checkpoint-500/: trainer_state.json
scripts/: build_router.py  cache_models.py  generate_dataset.py  health_check.py  init_db.py  merge_lora.py  notebook_code.py  profile_vram.py  seed_data.py
tests/: conftest.py  test_classifier.py  test_database.py  test_router.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_database.py  test_executor.py  test_router.py
(+3 files in other folders)
