[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "amd-multi-model-router"
version = "1.0.0"
description = "SLM-Based Intelligent Multi-Model Routing System for AMD ROCm GPUs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AMD Hackathon Team" }]
keywords = ["llm", "routing", "amd", "rocm", "fastapi", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

# ─── Tool: Black ──────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | node_modules
  | __pycache__
  | \.pytest_cache
  | mlruns
)/
'''

# ─── Tool: isort ──────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app", "ml"]
known_third_party = ["fastapi", "pydantic", "httpx", "sqlalchemy", "chromadb", "mlflow"]
skip_glob = ["venv/*", ".venv/*", "node_modules/*"]

# ─── Tool: Ruff ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git", ".venv", "venv", "node_modules", "__pycache__",
    ".pytest_cache", "mlruns", "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function call in default arg (FastAPI pattern)
    "B904",  # raise from in except (too strict for some patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

# ─── Tool: mypy ───────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv/", ".venv/", "node_modules/", "mlruns/"]

# ─── Tool: pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=70",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires running services)",
    "slow: Slow tests (model loading, etc.)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─── Tool: coverage ───────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
